more tests, changes in settings, addition of getTotalAmount, small fixes in FoodStorage